--- a/NEWS
+++ b/NEWS
@@ -33,11 +33,16 @@ mlr_2.5:
   therefore faster and more reliable; it also supports the additional parameter
   check.packages now that will check whether required packages are installed
   without loading them
-- many new function for statistical benchmark comparisons are added, see below
+- many new functions for statistical benchmark comparisons are added, see below
 - rename hasProperties, getProperties to hasLearnerProperties and getLearnerProperties
-- Learner Propoerties are now implemented object oriented as a state of a Learner.
-  Only RLearners have the properties stored in a slot. 
+- Learner properties are now implemented object oriented as a state of a Learner.
+  Only RLearners have the properties stored in a slot.
   For each class the getter can be overwritten.
+- The hill climbing algorithm for stacking (Caruana 04) is implemented as method 'hill.climb' in 'makeStackedLearner' to select models from base learners, which is equivalent to weighted average.
+- The model compression algorithm for stacking (Caruana 06) is implemented as method 'compress' in 'makeStackedLearner' to first select models from base learners and then mimic the behaviour with a super learner. The default super learner is neural network.
+- The "Feature-subspace Aggregating Ensemble Algorithm" is implemented as a new learner in 'FeatingEnsemble.R'.
+- relativeOverfitting provides a way to estimate how much a model overfits to
+  the training data according to a measure.
 - resample, benchmark, and resample convenience functions (crossval, repcv etc.) now support 
   the extract argument. FeatSelWrapper, FilterWrapper, TuneWrapper have a default extract method.
 
@@ -54,6 +59,9 @@ mlr_2.5:
    generateBenchmarkSummaryData, plotBenchmarkSummary,
    friedmanTestBMR, friedmanPostHocTestBMR, generateCritDifferencesData, plotCritDifferences
 -- getCaretParamSet
+-- generateCalibrationData and plotCalibration
+-- relativeOverfitting
+-- plotROCCurves
 
 - new measures
 -- hamloss
@@ -70,6 +78,10 @@ mlr_2.5:
 -- classif.saeDNN
 -- classif.dbnDNN
 -- classif.nnTrain
+-- classif.rknn
+-- regr.rknn
+-- classif.xgboost
+-- regr.xgboost
 
 - new filters
 -- permutation.importance
