--- a/NEWS
+++ b/NEWS
@@ -10,8 +10,8 @@ mlr_2.5:
   in the single-objective case
 - makeTuneControlGenSA: optimized function will be considered non-smooth
   per default (change via ... args)
-- classif.svm: added 'scale' param
-- ksvm: added 'cache' param
+- classif.svm, regr.svm: added 'scale' param
+- classif.ksvm, regr.ksvm: added 'cache' param
 - plotFilterValuesGGVIS: sort and n_show are interactive, interactive flag removed
 - renamed getProbabilities to getPredictionProbabilities and deprecated getProbabilities
 - plots now use long names for measures where possible
