--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,8 @@ mlr_2.5:
   in the single-objective case
 - makeTuneControlGenSA: optimized function will be considered non-smooth
   per default (change via ... args)
-- classif.svm: added 'scale' param
+- classif.svm, regr.svm: added 'scale' param
+- classif.ksvm, regr.ksvm: added 'cache' param
 - plotFilterValuesGGVIS: sort and n_show are interactive, interactive flag removed
 - renamed getProbabilities to getPredictionProbabilities and deprecated getProbabilities
 - plots now use long names for measures where possible
@@ -45,8 +46,6 @@ mlr_2.5:
   the training data according to a measure.
 - resample, benchmark, and resample convenience functions (crossval, repcv etc.) now support
   the extract argument. FeatSelWrapper, FilterWrapper, TuneWrapper have a default extract method.
-- generatePartialPredictionData now can estimate the partial derivative of the partial prediction function wrt the
-  features for regression, classification, and survival tasks.
 - restructured the LiblineaR learners to a more convenient format. These old ones were removed:
   classif.LiblineaRBinary, classif.LiblineaRLogReg,  classif.LiblineaRMultiClass.
   For the new ones, see below.
@@ -54,7 +53,7 @@ mlr_2.5:
 - new functions
 -- getDefaultMeasure
 -- getTaskClassLevels
--- getPredictionTruth, getPredictionResponse
+-- getPredictionTruth, getPredictionResponse, getPredictionSE
 -- convertMLBenchObjToTask
 -- getBMRLearners, getBMRMeasures, getBMRMeasureIds
 -- makeMultilabelTask, makeMultilabelWrapper, getMultilabelBinaryPerformances
