--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 mlr_2.6:
 - new learners
 -- regr.glmboost
+-- cluster.Cobweb
 
 mlr_2.5:
 - fixed a bug that caused performance() to return incorrect values with
