--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 mlr_2.6:
-- new learners
+- cluster.kmeans: added support for fuzzy clustering (property "prob")
+
+new learners
 -- regr.glmboost
 
 mlr_2.5:
