--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 mlr_2.6:
 - cluster.kmeans: added support for fuzzy clustering (property "prob")
+- regr.lm: removed some erroneous param settings
 
 new learners
 -- regr.glmboost
