--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+mlr_new:
+
 mlr_2.7:
 - New argument "models" for function benchmark
 - fixed a bug where 'keep.pred' was ignored in the benchmark function
