wrapper that adds support for one-class problems to learners (#587)

--- a/NEWS
+++ b/NEWS
@@ -120,6 +120,8 @@ mlr_2.8:
 
 - new functions
 -- getBMRModels
+- added wrapper that adds support for classification problems that have only a
+  single label or very sparse labels learners (ConstantClassWrapper)
 
 - removed functions
 -- generateROCRCurvesData, plotROCRCurves, plotROCRCurvesGGVIS
