--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,8 @@ mlr_new:
 - (generate/plot)PartialPrediction: added new arg "geom" for tile plots
 - small fix for plotBMRSummary
 - removed learners: classif.randomForestSRCSyn, regr.randomForestSRCSyn
-
+- the ModelMultiplexer inherits its predict.type from the base learners now
+- check that learners in an ensemble have the same predict.type
 
 new learners
 -- classif.randomForestSRCSyn
