--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ mlr_new:
 - Fixed a bug where several learners from the LiblineaR package
   ("classif.LiblineaRL2LogReg", "classif.LiblineaRL2SVC", "regr.LiblineaRL2L2SVR")
   were calling the wrong value for "type" (0) and thus training the wrong model.
+- Fixed a bug where the resampling objects hout, cv2, cv3, cv5, cv10 were not documented
+  in the ResampleDesc help page
 
 - API changes
 -- listLearners now returns a data frame with properties of the learners if
