inc version to 2.9 after cran release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+mlr_2.9:
+
+
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
  "univariate.model.score". The new one also has better defaults.
