--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 mlr_2.9:
-
+- SMOTEWrapper: fix a bug where "sw.nn" was not correctly passed down
 
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
