--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ mlr_2.9:
 - fixed a bug that caused hyperparameters to be not passed on correctly in the
   ModelMultiplexer in some cases
 - various cleanups that removed unused code
+- updated gmean measure and unit test, added reference to formula of gmean
 
 - new learners
 -- surv.cv.CoxBoost
