--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ mlr_2.9:
 - various cleanups that removed unused code
 - updated gmean measure and unit test, added reference to formula of gmean
 - classif.glmboost, regr.glmboost: add parameters stopintern and trace
+- convert data.frame-ish in Task if necessary
 
 - new learners
 -- surv.cv.CoxBoost
