--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ mlr_2.9:
 - fix some bartMachine compatibility issues
 - add pretty.names arguments to plots that show learner short names instead of
   IDs
+- improve documentation for permutation importance filter
 
 - new learners
 -- surv.cv.CoxBoost
