--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ mlr_2.9:
   argument renaming to fix potential name clashes
 - fix small bug in DownsampleWrapper when trained with weights
 - the "penalized" learner were restructured and improved (params were added), also see below.
+- makeCostMeasure: removed arg "task", names of cost matrix are checked on measure calculation
 
 - new learners
 -- surv.cv.CoxBoost
