--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,7 @@ mlr_2.9:
 - fix small bug in DownsampleWrapper when trained with weights
 - the "penalized" learner were restructured and improved (params were added), also see below.
 - makeCostMeasure: removed arg "task", names of cost matrix are checked on measure calculation
+-- fixed weight handling and weight tag for some learners
 
 - new learners
 -- surv.cv.CoxBoost
