--- a/NEWS
+++ b/NEWS
@@ -51,6 +51,9 @@ mlr_2.9:
 - removed functions
 -- getParamSet generic (now in ParamHelpers package)
 
+- new measures
+-- measureBrier (for mutliclass problems)
+
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
  "univariate.model.score". The new one also has better defaults.
