--- a/NEWS
+++ b/NEWS
@@ -39,7 +39,7 @@ mlr_2.9:
 - added the ability to generate and plot data from the hyperparameter tuning
   path for a single hyperparameter
 - addition of 'data' argument to plotPartialDependence which adds the training data to the graph
-- added new arguments "facet.wrap.nrow" and "facet.wrap.ncol" which enable arrangement of facets in rows and columns to "plotBMRBoxplots"
+- added new arguments "facet.wrap.nrow" and "facet.wrap.ncol" which enable arrangement of facets in rows and columns to plotting functions
 
 - new learners
 -- classif.C50
