--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+mlr_new:
+- Add multilabel wrappers: classifier chains, nested stacking, dependent 
+  binary relevance, stacking
 mlr_2.9:
 - removeConstantFeatures now also operates on data.frames and
   makeRemoveConstantFeaturesWrapper can be used to augment a learner with this
