--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,4 @@
 mlr_new:
-- Add multilabel wrappers: classifier chains, nested stacking, dependent 
-  binary relevance, stacking
 mlr_2.9:
 - removeConstantFeatures now also operates on data.frames and
   makeRemoveConstantFeaturesWrapper can be used to augment a learner with this
@@ -43,6 +41,7 @@ mlr_2.9:
   path for a single hyperparameter
 - addition of 'data' argument to plotPartialDependence which adds the training data to the graph
 - added new arguments "facet.wrap.nrow" and "facet.wrap.ncol" which enable arrangement of facets in rows and columns to plotting functions
+- new multilabel wrappers algorithms: classifier chains, nested stacking, dependent binary relevance, stacking
 
 - new learners
 -- classif.C50
@@ -76,13 +75,18 @@ mlr_2.9:
 - new functions
 -- generateHyperParsEffectData
 -- plotHyperParsEffect
+-- makeMultilabelClassifierChainsWrapper
+-- makeMultilabelDBRWrapper
+-- makeMultilabelNestedStackingWrapper
+-- makeMultilabelStackingWrapper
 
 - removed functions
 -- getParamSet generic (now in ParamHelpers package)
 
 - new measures
--- measureBrier (for mutliclass problems)
+-- measureBrier (for multiclass problems)
 -- logloss
+-- multilabel: mlsubset01, mlf1, mlacc, mlprec, mlrecall
 
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
