--- a/NEWS
+++ b/NEWS
@@ -42,6 +42,7 @@ mlr_2.9:
 - addition of 'data' argument to plotPartialDependence which adds the training data to the graph
 - added new arguments "facet.wrap.nrow" and "facet.wrap.ncol" which enable arrangement of facets in rows and columns to plotting functions
 - new multilabel wrappers algorithms: classifier chains, nested stacking, dependent binary relevance, stacking
+- renamed multilabel measure "hamloss" to "multilabel.hamloss"
 
 - new learners
 -- classif.C50
@@ -84,9 +85,9 @@ mlr_2.9:
 -- getParamSet generic (now in ParamHelpers package)
 
 - new measures
--- measureBrier (for multiclass problems)
+-- multiclass.brier
 -- logloss
--- multilabel: mlsubset01, mlf1, mlacc, mlprec, mlrecall
+-- multilabel.subset01, multilabel.f1, multilabel.acc, multilabel.ppv, multilabel.tpr
 
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
