--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ mlr_2.10:
    fuzzy matching to suggest the 3 closest names in the message
 -- tuning: tuning with irace is now also parallelized, i.e., different
    learner config are evaluated in parallel.
+-- removed parameters "minprob", "pvalue", "randomsplits" from classif.cforest as these are set internally and cannot be changed by the user
 
 - functions - new
 
