NEWS for 1112 [ci skip]

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ mlr_2.10:
 
 - functions - new
 -- filter: randomForest.importance
+-- generateFeatureImportanceData: permutation-based featuree importance and local importance
 
 - functions - removed
 
