--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,7 @@ mlr_2.10:
 -- calculateROCMeasures
 -- calculateConfusionMatrix: new confusion-matrix like function that calculates
    and tables many receiver operator measures
+-- makeLearners: create multiple learners at once
 
 - functions - removed
 
